--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "devDependencies": {
     "@mdi/js": "^7.0.96",
+    "@pinia/nuxt": "^0.4.2",
     "nuxt": "3.0.0-rc.10"
   },
   "dependencies": {
+    "pinia": "^2.0.22",
     "sass": "^1.51.0",
+    "vue": "^3.2.39",
     "vuetify": "^3.0.0-beta.1"
   }
 }
